tests/fixtures/valid/block_comments.ny
/* This is a block comment */
fn main() -> i32 {
    /* multi-line
       comment */
    x := 42;
    /* nested /* inner */ outer */
    return x;
}
